[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Tavern/Buttons/TavernBtn.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tavern/Buttons/buy_btn.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Tavern/Buttons/buy_btn_pressed.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Tavern/Buttons/buy_btn_disabled.png" type="Texture" id=4]

[node name="TavernBtn" type="HBoxContainer"]
margin_right = 300.0
margin_bottom = 20.0
alignment = 1
script = ExtResource( 1 )

[node name="Name" type="Label" parent="."]
margin_left = 77.0
margin_top = 6.0
margin_right = 115.0
margin_bottom = 20.0
text = "Name"

[node name="PriceGold" type="Label" parent="."]
margin_left = 119.0
margin_top = 6.0
margin_right = 150.0
margin_bottom = 20.0
text = "10 zl"

[node name="PriceXp" type="Label" parent="."]
margin_left = 154.0
margin_top = 6.0
margin_right = 189.0
margin_bottom = 20.0
text = "10 xp"

[node name="BuyBtn" type="TextureButton" parent="."]
margin_left = 193.0
margin_right = 222.0
margin_bottom = 26.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_TavernBtn_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TavernBtn_mouse_exited"]
[connection signal="pressed" from="BuyBtn" to="." method="_on_BuyBtn_pressed"]
